; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/pci/extr_pci.c_pci_check_and_set_intx_mask.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/pci/extr_pci.c_pci_check_and_set_intx_mask.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pci_dev = type { i32, %struct.pci_bus* }
%struct.pci_bus = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (%struct.pci_bus*, i32, i32, i32, i32)*, i32 (%struct.pci_bus*, i32, i32, i32, i32*)* }

@PCI_COMMAND = common dso_local global i32 0, align 4
@PCI_STATUS = common dso_local global i32 0, align 4
@pci_lock = common dso_local global i32 0, align 4
@PCI_STATUS_INTERRUPT = common dso_local global i32 0, align 4
@PCI_COMMAND_INTX_DISABLE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pci_dev*, i32)* @pci_check_and_set_intx_mask to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pci_check_and_set_intx_mask(%struct.pci_dev* %0, i32 %1) #0 {
  %3 = alloca %struct.pci_dev*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.pci_bus*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  %11 = alloca i32, align 4
  store %struct.pci_dev* %0, %struct.pci_dev** %3, align 8
  store i32 %1, i32* %4, align 4
  %12 = load %struct.pci_dev*, %struct.pci_dev** %3, align 8
  %13 = getelementptr inbounds %struct.pci_dev, %struct.pci_dev* %12, i32 0, i32 1
  %14 = load %struct.pci_bus*, %struct.pci_bus** %13, align 8
  store %struct.pci_bus* %14, %struct.pci_bus** %5, align 8
  store i32 1, i32* %6, align 4
  %15 = load i32, i32* @PCI_COMMAND, align 4
  %16 = srem i32 %15, 4
  %17 = call i32 @BUILD_BUG_ON(i32 %16)
  %18 = load i32, i32* @PCI_COMMAND, align 4
  %19 = add nsw i32 %18, 2
  %20 = load i32, i32* @PCI_STATUS, align 4
  %21 = icmp ne i32 %19, %20
  %22 = zext i1 %21 to i32
  %23 = call i32 @BUILD_BUG_ON(i32 %22)
  %24 = load i64, i64* %10, align 8
  %25 = call i32 @spin_lock_irqsave(i32* @pci_lock, i64 %24)
  %26 = load %struct.pci_bus*, %struct.pci_bus** %5, align 8
  %27 = getelementptr inbounds %struct.pci_bus, %struct.pci_bus* %26, i32 0, i32 0
  %28 = load %struct.TYPE_2__*, %struct.TYPE_2__** %27, align 8
  %29 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %28, i32 0, i32 1
  %30 = load i32 (%struct.pci_bus*, i32, i32, i32, i32*)*, i32 (%struct.pci_bus*, i32, i32, i32, i32*)** %29, align 8
  %31 = load %struct.pci_bus*, %struct.pci_bus** %5, align 8
  %32 = load %struct.pci_dev*, %struct.pci_dev** %3, align 8
  %33 = getelementptr inbounds %struct.pci_dev, %struct.pci_dev* %32, i32 0, i32 0
  %34 = load i32, i32* %33, align 8
  %35 = load i32, i32* @PCI_COMMAND, align 4
  %36 = call i32 %30(%struct.pci_bus* %31, i32 %34, i32 %35, i32 4, i32* %7)
  %37 = load i32, i32* %7, align 4
  %38 = ashr i32 %37, 16
  %39 = load i32, i32* @PCI_STATUS_INTERRUPT, align 4
  %40 = and i32 %38, %39
  store i32 %40, i32* %11, align 4
  %41 = load i32, i32* %4, align 4
  %42 = load i32, i32* %11, align 4
  %43 = icmp ne i32 %41, %42
  br i1 %43, label %44, label %45

44:                                               ; preds = %2
  store i32 0, i32* %6, align 4
  br label %75

45:                                               ; preds = %2
  %46 = load i32, i32* %7, align 4
  store i32 %46, i32* %8, align 4
  %47 = load i32, i32* %8, align 4
  %48 = load i32, i32* @PCI_COMMAND_INTX_DISABLE, align 4
  %49 = xor i32 %48, -1
  %50 = and i32 %47, %49
  store i32 %50, i32* %9, align 4
  %51 = load i32, i32* %4, align 4
  %52 = icmp ne i32 %51, 0
  br i1 %52, label %53, label %57

53:                                               ; preds = %45
  %54 = load i32, i32* @PCI_COMMAND_INTX_DISABLE, align 4
  %55 = load i32, i32* %9, align 4
  %56 = or i32 %55, %54
  store i32 %56, i32* %9, align 4
  br label %57

57:                                               ; preds = %53, %45
  %58 = load i32, i32* %9, align 4
  %59 = load i32, i32* %8, align 4
  %60 = icmp ne i32 %58, %59
  br i1 %60, label %61, label %74

61:                                               ; preds = %57
  %62 = load %struct.pci_bus*, %struct.pci_bus** %5, align 8
  %63 = getelementptr inbounds %struct.pci_bus, %struct.pci_bus* %62, i32 0, i32 0
  %64 = load %struct.TYPE_2__*, %struct.TYPE_2__** %63, align 8
  %65 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %64, i32 0, i32 0
  %66 = load i32 (%struct.pci_bus*, i32, i32, i32, i32)*, i32 (%struct.pci_bus*, i32, i32, i32, i32)** %65, align 8
  %67 = load %struct.pci_bus*, %struct.pci_bus** %5, align 8
  %68 = load %struct.pci_dev*, %struct.pci_dev** %3, align 8
  %69 = getelementptr inbounds %struct.pci_dev, %struct.pci_dev* %68, i32 0, i32 0
  %70 = load i32, i32* %69, align 8
  %71 = load i32, i32* @PCI_COMMAND, align 4
  %72 = load i32, i32* %9, align 4
  %73 = call i32 %66(%struct.pci_bus* %67, i32 %70, i32 %71, i32 2, i32 %72)
  br label %74

74:                                               ; preds = %61, %57
  br label %75

75:                                               ; preds = %74, %44
  %76 = load i64, i64* %10, align 8
  %77 = call i32 @spin_unlock_irqrestore(i32* @pci_lock, i64 %76)
  %78 = load i32, i32* %6, align 4
  ret i32 %78
}

declare dso_local i32 @BUILD_BUG_ON(i32) #1

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
